tests/invalid/runtime/index_get_string_oob_emoji.pts
function main() : void {
    string s = "a😀b";
    glyph g = s[3];
    Sys.print(g.toString());
}
